llm interview & kmeans

--- a/Machine Learning/DL/深度学习.md
+++ b/Machine Learning/DL/深度学习.md
@@ -62,7 +62,7 @@ $$
 
 改变梯度积累为指数加权的移动平均，丢弃遥远过去的历史。使用移动平均引入了一个新的超参数$\rho$
 
-![RMSProp](..\img\RMSProp.png)
+![RMSProp](../img/RMSProp.png)
 
 #### Adam
 
